--- a/package.json
+++ b/package.json
@@ -54,9 +54,12 @@
   "devDependencies": {
     "@testing-library/user-event": "^14.2.1",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^29.5.0",
     "jest-fetch-mock": "^3.0.3",
+    "jest-watch-typeahead": "^0.6.5",
     "json-server": "^0.17.0",
     "prettier": "^2.7.1",
+    "react-test-renderer": "^18.2.0",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1"
   },
